--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,14 @@ java {
         languageVersion = JavaLanguageVersion.of(21)
     }
 }
-
+/*
+Added sourceCompatibility = '21'
+targetCompatibility = '21'
+ */
+sourceCompatibility = '21'
+targetCompatibility = '21'
+//json
+//implementation 'org.json:json:20210307'
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
     options.compilerArgs.add('-parameters')
@@ -36,6 +43,8 @@ configurations {
 }
 
 dependencies {
+//    org.json
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     agent "org.aspectj:aspectjweaver:$aspectJVersion"
     testImplementation platform("io.qameta.allure:allure-bom:$allureVersion")
     testImplementation "io.qameta.allure:allure-junit5"
