Added some dependencies for the proxy to check POST request

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,11 @@ configurations {
 
 dependencies {
 //    org.json
+    // https://mvnrepository.com/artifact/net.lightbody.bmp/browsermob-core
+    implementation 'net.lightbody.bmp:browsermob-core:2.1.5'
+    // https://mvnrepository.com/artifact/com.browserup/browserup-proxy-core
+    implementation 'com.browserup:browserup-proxy-core:2.1.2'
+
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     agent "org.aspectj:aspectjweaver:$aspectJVersion"
     testImplementation platform("io.qameta.allure:allure-bom:$allureVersion")
