--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'net.lightbody.bmp:browsermob-core:2.1.5'
     // https://mvnrepository.com/artifact/com.browserup/browserup-proxy-core
     implementation 'com.browserup:browserup-proxy-core:2.1.2'
+    //proxy
+    // https://mvnrepository.com/artifact/com.codeborne/selenide-proxy
+    implementation group: 'com.codeborne', name: 'selenide-proxy', version: '7.7.1'
 
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     agent "org.aspectj:aspectjweaver:$aspectJVersion"
@@ -58,6 +61,13 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
     testImplementation "org.slf4j:slf4j-simple:2.0.9"
     testImplementation 'com.codeborne:selenide:7.0.4'
+    // restAssured impl
+//    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '3.0.0'
+    testImplementation 'io.rest-assured:rest-assured:5.4.0' // Используйте последнюю стабильную версию
+
+    // https://mvnrepository.com/artifact/org.hamcrest/hamcrest
+    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
+
 }
 
 test {
